Fix font size on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,9 +48,10 @@ h1 {
 }
 
 #logo {
-    font-size: 125%;
-    line-height: 50px;
+    font-size: 75%;
+    line-height: 30px;
     margin: 0 0.5rem;
+    
 }
 
 #menu {
@@ -129,7 +130,7 @@ main {
     background-color:;
     /*make main element take up any suplus space*/
     flex: 1 0 auto;
-    margin-top: 30px;
+    margin-top: 38px;
 }
 
 footer {
